# BOFA

./: .dockerignore  .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CORE_COMPLETION.md  Dockerfile.api  Dockerfile.frontend  README.md  SECURITY.md  bofa-universal.sh  bofa.sh  docker-compose.yml  install-linux.sh  install-windows.ps1  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.github/: TOPICS.md
agents/: __init__.py  llm_providers.py  security_agent.py
api/: Dockerfile  README.md  api_key_manager.py  auth.py  database.py  execution_queue.py  lab_manager.py  main.py  requirements.txt  run_manager.py  script_executor.py  websocket_manager.py
cli/: CLI_STABILITY.md  Dockerfile  README.md  bofa_cli.py  os_detector.py  requirements.txt
config/: bofa.yaml.example
config/flows/: blue.yaml  blue_daily.yaml  blue_risk_assessment.yaml  bug_bounty_full_chain.yaml  bug_bounty_web_diff.yaml  bug_bounty_web_full.yaml  bug_bounty_web_light.yaml  bug_bounty_web_params.yaml  cloud_config_review.yaml  ctf_binary_recon.yaml  ctf_network_recon.yaml  demo.yaml  exploit_payload_workshop.yaml  forensics_diff.yaml  forensics_quick.yaml  full_recon.yaml  malware_static_recon.yaml  network_zero_trust_overview.yaml  pentest_basic.yaml  recon.yaml  vuln_to_action.yaml  vuln_triage.yaml  vulnerability_scan.yaml  web_recon.yaml  web_security_review.yaml
core/: CONTRACT_VALIDATION.md  RESPONSIBILITIES.md  VALIDATION_REPORT.md  __init__.py  cancellation.py
core/config/: __init__.py  config_manager.py
core/engine/: __init__.py  engine.py
core/errors/: __init__.py  exceptions.py
core/logger/: __init__.py  logger.py
core/utils/: __init__.py  module_loader.py  path_utils.py  script_validator.py
database/: init.sql
docs/: AGENT.md  ARSENAL_AND_QUALITY.md  BOFA_AT_A_GLANCE.md  CORE_ARCHITECTURE.md  CORE_USAGE.md  CTF_AND_TRAINING.md  DOCUMENTATION_INDEX.md  ERRORS_AND_LOGGING.md  INSTALLATION.md  LLM_CYBERSECURITY.md  MCP_CURSOR_INTEGRATION.md  MODULE_CHECKLIST.md  MODULE_CONTRACT.md  NEXT_STEPS_AND_ROADMAP.md  ORCHESTRATION_AND_CHAINING.md  PHASE1_IMPLEMENTATION.md  QUICK_START_FIRST_MODULE.md  README.md  RELEASE.md  REPORTS_CONVENTION.md  STATUS.md  USAGE.md  ZERO_DAY_AND_REPORTING.md
flows/: README.md  __init__.py  flow_runner.py
labs/: .gitkeep  README.md
labs/internal-network/: docker-compose.yml  metadata.yaml
labs/lab-ad-enum/: README.md  docker-compose.yml  metadata.yaml
labs/lab-ai-red-team/: docker-compose.yml  metadata.yaml
labs/lab-android-emulation/: README.md  docker-compose.yml  metadata.yaml  nginx.conf
labs/lab-cloud-misconfig/: docker-compose.yml  metadata.yaml
labs/lab-ctf-generator/: README.md  docker-compose.yml  metadata.yaml
labs/lab-edge-ai-security/: docker-compose.yml  metadata.yaml
labs/lab-edr-evasion/: docker-compose.yml  metadata.yaml
labs/lab-neural-adversarial/: docker-compose.yml  metadata.yaml
labs/lab-quantum-cryptography/: docker-compose.yml  metadata.yaml
labs/lab-quantum-simulator/: docker-compose.yml  metadata.yaml
labs/lab-zero-day-scanner/: README.md  docker-compose.yml  metadata.yaml
labs/siem-detection/: metadata.yaml
labs/web-application-security/: docker-compose.yml  metadata.yaml
labs/web-sqli/: README.md  docker-compose.yml  metadata.yaml
logging/: logstash.conf
mcp/: README.md  __init__.py  bofa_mcp.py
monitoring/: prometheus.yml
nginx/: .htpasswd  Dockerfile  default.conf
nginx/ssl/: bofa.local.crt  bofa.local.key
reports/: README.md
scripts/: README.md  generate-ssl.sh  install.sh  verify_installation.sh
scripts/ai/: ai_vulnerability_predictor.py  ai_vulnerability_predictor.yaml  behavioral_anomaly_detector.py  behavioral_anomaly_detector.yaml
scripts/blue/: .gitkeep  ai_threat_hunter.py  ai_threat_hunter.yaml  auth_log_parser.py  auth_log_parser.yaml  (+20 more)
src/: App.css  App.tsx  index.css
tools/: README.md  run_agent.py  self_hack_runner.py  verify_bofa.py  verify_control_plane.py  verify_evidence_bundle.py  verify_runtime_hardening.py
web/: Dockerfile  index.html
wiki/: Home.md  Installation.md  README.md  Roadmap.md  Status.md  _Sidebar.md
(+243 files in other folders)
